# TauriEgui

./: CHANGELOG.md  Cargo.toml  DEPENDENTS.md  README.md
.github/: dependabot.yml
.github/workflows/: Rust.yml
Source/: lib.rs  plugin.rs
Source/plugin/: window.rs
examples/demo/: main.rs  tauri.conf.json
examples/egui_demo_app/: Cargo.toml  README.md
examples/egui_demo_app/Source/: backend_panel.rs  frame_history.rs  lib.rs  main.rs  wrap_app.rs
examples/egui_demo_app/Source/apps/: custom3d_glow.rs  custom3d_wgpu.rs  fractal_clock.rs  http_app.rs
examples/egui_demo_lib/: Cargo.toml  README.md
examples/egui_demo_lib/Source/: color_test.rs  lib.rs  syntax_highlighting.rs
examples/egui_demo_lib/Source/demo/: about.rs  code_editor.rs  code_example.rs  context_menu.rs  dancing_strings.rs  demo_app_windows.rs  drag_and_drop.rs  font_book.rs  layout_test.rs  misc_demo_window.rs  mod.rs  multi_touch.rs  paint_bezier.rs  painting.rs  password.rs  plot_demo.rs  scrolling.rs  sliders.rs  strip_demo.rs  table_demo.rs  tests.rs  text_edit.rs  toggle_switch.rs  widget_gallery.rs  window_options.rs  window_with_panels.rs
examples/egui_demo_lib/Source/easy_mark/: easy_mark_editor.rs  easy_mark_highlighter.rs  easy_mark_parser.rs  easy_mark_viewer.rs
examples/egui_demo_lib/benches/: benchmark.rs
