[[bench]]
harness = false
name = "benchmark"

[dependencies]
chrono = { version = "0.4", optional = true, features = ["js-sys", "wasmbind"] }
document-features = { version = "0.2", optional = true }
egui = { version = "0.19.0", default-features = false }
egui_extras = { version = "0.19.0" }
enum-map = { version = "2", features = ["serde"] }
serde = { version = "1", optional = true, features = ["derive"] }
syntect = { version = "5", optional = true, default-features = false, features = ["default-fancy"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
unicode_names2 = { version = "0.5.0", default-features = false }

[dev-dependencies]
criterion = { version = "0.3", default-features = false }

[features]
chrono = ["egui_extras/datepicker", "dep:chrono"]
default = []
serde = ["egui/serde", "dep:serde"]
syntax_highlighting = ["syntect"]

[lib]
path = "Source/lib.rs"

[package]
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
categories = ["gui", "graphics"]
description = "Example library for egui"
edition = "2021"
homepage = "https://github.com/emilk/egui/tree/master/crates/egui_demo_lib"
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = ["glium", "egui", "gui", "gamedev"]
license-file = "LICENSE"
name = "egui_demo_lib"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/master/crates/egui_demo_lib"
rust-version = "1.61"
version = "0.19.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
all-features = true
